--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.usa.ciclo4</groupId>
 	<artifactId>reto_4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>reto_3</name>
+	<name>reto_4</name>
 	<description>Proyecto de cabañas - Reto 4</description>
 	<properties>
 		<java.version>11</java.version>
@@ -73,7 +73,12 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.26</version>
+			<version>8.0.27</version>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 
 		<dependency>
