--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,5 @@
+spring.profiles.active=isaac
 spring.thymeleaf.cache=false
-
-#spring.h2.console.settings.web-allow-others=true
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:myH2DB
-#spring.datasource.username=h2
-#spring.datasource.password=1193551867aN
-
-# Para pruebas en localhost
-
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
-spring.datasource.username=root
-spring.datasource.password=1193551867
-#spring.datasource.password=1193551867aN
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-
 # Login Oauth2 con GitHub
 spring.security.oauth2.client.registration.github.client-id=85e06cbd8c68811638a8
 spring.security.oauth2.client.registration.github.client-secret=b97aad0bbd882027774c13d8da73a56a9597531c
