--- a/src/main/resources/application-isaac.properties
+++ b/src/main/resources/application-isaac.properties
@@ -1,8 +1,9 @@
 # Para pruebas en localhost
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
 spring.datasource.username=root
-spring.datasource.password=1193551867
-#spring.datasource.password=1193551867aN
+#spring.datasource.password=1193551867
+spring.datasource.password=1193551867aN
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
