--- a/src/main/resources/application-isaac.properties
+++ b/src/main/resources/application-isaac.properties
@@ -1,8 +1,8 @@
 # Para pruebas en localhost
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
 spring.datasource.username=root
-#spring.datasource.password=1193551867
-spring.datasource.password=1193551867aN
+spring.datasource.password=1193551867
+#spring.datasource.password=1193551867aN
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
