finalizado form Clientes,Cabañas y Categorias.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ src/main/resources/templates/test-input-range/function_range.js
 src/main/resources/templates/test-input-range/index.html
 Reto_4_G14.docx
 ~$to_4_G14.docx
+src/main/java/com/usa/ciclo3/reto4/model/test_fechas.java
