--- a/src/main/resources/application-isaac.properties
+++ b/src/main/resources/application-isaac.properties
@@ -1,9 +1,19 @@
+#Para subir a Oracle
+
+spring.thymeleaf.cache=false
+
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:myH2DB
+spring.datasource.username=h2
+spring.datasource.password=
+
 # Para pruebas en localhost
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
-spring.datasource.username=root
-spring.datasource.password=1193551867
+#spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
+#spring.datasource.username=root
+#spring.datasource.password=1193551867
 #spring.datasource.password=1193551867aN
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.mvc.hiddenmethod.filter.enabled=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
