Interfaz de administrador diseñada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=isaac
+spring.profiles.active=h2
 spring.thymeleaf.cache=false
 # Login Oauth2 con GitHub
 spring.security.oauth2.client.registration.github.client-id=85e06cbd8c68811638a8
