--- a/src/main/resources/application-jhon.properties
+++ b/src/main/resources/application-jhon.properties
@@ -1,8 +1,7 @@
-# Para pruebas en localhost
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_14
+# Para pruebas en localhost con mysql y xampp
+spring.datasource.url=jdbc:mysql://localhost:3306/reto3
 spring.datasource.username=root
-spring.datasource.password=1193551867
-#spring.datasource.password=1193551867aN
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
