Finalizados y verificados todos los forms y sus acciones,actualizado cascadeType => ALL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=isaac
 spring.thymeleaf.cache=false
-# Login Oauth2 con GitHub
+
+# Login Oauth2 con GitHub (Solo sirve en local)
 spring.security.oauth2.client.registration.github.client-id=85e06cbd8c68811638a8
 spring.security.oauth2.client.registration.github.client-secret=b97aad0bbd882027774c13d8da73a56a9597531c
