Interfaz de categorias añadida

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=h2
+spring.profiles.active=jhon
 spring.thymeleaf.cache=false
 
 # Login Oauth2 con GitHub (Solo sirve en local)
